# dator

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_domain.rs  fuzz_email.rs  fuzz_ipv4.rs  fuzz_ipv6.rs
src/: domain.rs  ip.rs  lib.rs  mail.rs
tests/: domain.rs  email.rs  ip.rs
